--- a/vagrant/config/vagrant-local.example.yml
+++ b/vagrant/config/vagrant-local.example.yml
@@ -1,5 +1,5 @@
 # Your personal GitHub token
-github_token: 77188c2c399ec8fb7cce6e244d1d63bd9e6d78ff
+github_token: token
 # Read more: https://github.com/blog/1509-personal-api-tokens
 # You can generate it here: https://github.com/settings/tokens
 
